--- a/index.html
+++ b/index.html
@@ -112,5 +112,6 @@
 </head>
   <body class="overflow-x-hidden">
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
